<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
    <variable
        name="main"
        type="com.appfactorycoding.section.search.ui.SearchFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <ProgressBar
            android:id="@+id/progressBar"
            android:visibility="gone"
            android:indeterminate="true"
            android:layout_width="wrap_content"
            android:gravity="center"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />
        <TextView
            android:id="@+id/hint"
            android:layout_width="wrap_content"
            android:gravity="center"
            android:text="@string/please_enter_the_category_in_search"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:fontFamily="@font/open_sans_bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerList"
            android:name=".EmployeesFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            app:layoutManager="LinearLayoutManager"
            android:orientation="vertical"
            tools:context=".ui.main.employeesList.EmployeesFragment" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>